--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-numpy~>=1.20.2
-simpleitk~>=2.0.2
-opencv-python~>=4.5.2.52
-scipy~>=1.6.2
-timm~>=0.4.9
-tqdm~>=4.59.0
-pandas~>=1.2.4
+torch>=1.9.0+cu111
+tqdm>=4.62.2
+simpleitk>=2.1.0
+numpy>=1.21.2
+opencv-python>=4.5.3.56
+pandas>=1.2.4
+scipy>=1.6.2
+einops>=0.3.0
+timm>=0.4.12
+yaml>=0.2.5
+pyyaml>=5.4.1
+monai>=0.6.0
